<resources>
    <string name="app_name">Calculadora_4_operações</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_reset">C</string>
    <string name="button_parenteses">( )</string>
    <string name="button_porcentagem">%</string>
    <string name="button_soma">+</string>
    <string name="button_subtracao">-</string>
    <string name="button_multiplicacao">X</string>
    <string name="button_divisao">/</string>
    <string name="button_sinal">+/-</string>
    <string name="button_virgula">,</string>
    <string name="button_igual">=</string>
</resources>
